--- a/src/plugins/mpi/pmix/TODO
+++ b/src/plugins/mpi/pmix/TODO
@@ -1,12 +1,5 @@
-The list of thing stat remain unfixed in this plugin
+The list of things that has to be done in future
 
-* Fix finalization logic
-
-There might be several ways to do that:
-1. Current SLURM mpi plugin API doesn't have finalization routine for stepd's. 
-I've asked for it, if it would be added - this will completely solve the finalization
-problem.
-2. I intend to extend PMIx server-side API to make it clear when all processes are finalzed.
-
-* Add direct modex timer check to avoid application forever-hangs in case there was communication 
-error.
+1. Retrieve cpusets from SLURM and pass it to the application.
+2. Implement MPI dynamics.
+3. ...
